--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,4 @@
 {
   "version": 2,
-  "name": "whatsapp-phone-query",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  "framework": "vite"
 }
